== history for distribution Any-Daemon-HTTP

version 0.29:

	Fixes:
	- dependency on HTTP::Daemon too high.

	Improvements:
	- explicit state protocol with new(protocol) begin HTTP or HTTPS.

version 0.28: Wed 20 Mar 17:18:25 CET 2019

	Fixes:
	- call ::VirtualHost::new() without handlers
	- missing dependency on LWP::UserAgent

	Changes:
	- ::VirtualHost::new(aliases) defaults to 'AUTO'

	Improvements:
	- find virtual-host handler for '/'.
	- run(new_connection) with method name.
	- new option run(new_child)
	- add ::VirtualHost->new aliases proxy and directory.
	- for vhost, fallback to lookup name/aliases without portnumber.
	- error when produced response isn't a HTTP::Response.

version 0.27: Sun  4 Mar 12:26:01 CET 2018

	Fixes:
	- ::VirtualHost::new(handlers) now initialized via ::addHandler()
	- do only randomize max_conn when large enough.

	Improvements:
	- ::VirtualHost::new(handler) alternative for ::new(handlers)
	- convert to GIT and GitHub

version 0.26: Mon Sep 19 23:18:38 CEST 2016

	Fixes:
	- include examples in the manual-pages

	Improvements:
	- multi-proxy
	- ::VirtualHost::new(aliases) value 'AUTO'

version 0.25: Tue Apr 15 08:49:00 CEST 2014

	Fixes:
	- deadline passed log showed '0' seconds passed
	- changes in LogReport [cpantesters]

	Improvements:
	- changed documentation style
	- wait upto 30 seconds when the socket is still in use.

version 0.24: Sun Jan  5 17:38:19 CET 2014

	Changes:
	- removed ::HTTP::new(use_ssl), now detected from portnumber
	- move to Log::Report 1.00
	- use IO::Socket::IP, to support IPv6

	Fixes:
	- no warning when request does not have Host
	- show destination and owner of symlinks
	- vhost not finding directory.
	  rt.cpan.org#91672 [Kenney Westerhof]

	Improvements:	
	- ::Directory make charset configurable.
	- minor cleanups after demo at Perl Mongers A'dam meeting
	- now multiple ports possible
	- deprecate ::HTTP::new(host) and ::new(socket) for new option
	  new(listen).