@@ -7,6 +7,7 @@ version 0.29:
 
 	Improvements:
 	- explicit state protocol with new(protocol) begin HTTP or HTTPS.
+	- option to disable displaying processing info of childs in 'ps'.
 
 version 0.28: Wed 20 Mar 17:18:25 CET 2019
 
